--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         java-version: 1.8
         java-package: jdk+fx
+        distribution: oracle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
