--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         java-version: 8
         java-package: jdk+fx
-        distribution: adopt-hotspot
+        distribution: temurin
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
