--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -20,8 +20,8 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: 8
-        java-package: jdk+fx
-        distribution: temurin
+        java-package: jdk
+        distribution: oracle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
