--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 1.8
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
-        java-version: 8
-        java-package: jdk
-        distribution: adopt-hotspot
+        java-version: 17
+        java-package: jdk+fx
+        distribution: temurin
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
